<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_pkt_settings_header"/>

    <View
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_title"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/seek_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/settings_title"
        android:layout_below="@id/settings_title"
        android:layout_marginTop="12dp"
        android:text="@string/alarm_volume_title"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/seek_bar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/seek_bar_title"
        android:layout_marginEnd="8dp"
        android:text="11"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <SeekBar
        android:id="@+id/alarm_volume_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_bar_title"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp" />

    <View
        android:id="@+id/divider_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/alarm_volume_seek_bar"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:id="@+id/vibrate_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@id/divider_two">

        <TextView
            android:id="@+id/vibrate_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_title"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/vibrate_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_alignStart="@id/vibrate_title_tv"
            android:layout_below="@id/vibrate_title_tv"
            android:text="@string/vibrate_body"
            android:textSize="13dp"/>

        <CheckBox
            android:id="@+id/vibrate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/vibrate_parent"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:id="@+id/warning_alarm_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@id/divider_three">

        <TextView
            android:id="@+id/warning_alarm_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/warning_alarm_title"
            android:textColor="@android:color/black"
            android:textSize="16dp"/>

        <CheckBox
            android:id="@+id/warning_alarm_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/warning_alarm_body_start_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_alignStart="@id/warning_alarm_title_tv"
            android:layout_below="@id/warning_alarm_title_tv"
            android:text="@string/warning_alarm_body_start"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/warning_alarm_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_toEndOf="@id/warning_alarm_body_start_tv"
            android:layout_alignBottom="@id/warning_alarm_body_start_tv"
            android:text="5"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/warning_alarm_body_end_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/warning_alarm_value"
            android:layout_alignBottom="@id/warning_alarm_body_start_tv"
            android:text="@string/warning_alarm_body_end"
            android:textSize="13dp"/>

        <SeekBar
            android:id="@+id/warning_alarm_volume_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/warning_alarm_body_start_tv"
            android:layout_marginTop="12dp" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_four"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/warning_alarm_parent"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:id="@+id/keep_screen_on_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@id/divider_four">

        <TextView
            android:id="@+id/keep_screen_on_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_screen_on_title"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/keep_screen_on_warning_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_alignStart="@id/keep_screen_on_title_tv"
            android:layout_below="@id/keep_screen_on_title_tv"
            android:text="@string/keep_screen_on_warning"
            android:textColor="@color/timer_one_finish_notif_background"
            android:textStyle="bold"
            android:textSize="13dp"/>

        <CheckBox
            android:id="@+id/keep_screen_on_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_five"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/keep_screen_on_parent"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/about_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_five"
        android:layout_marginTop="12dp"
        android:text="@string/About"
        android:textSize="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/version_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/about_header"
        android:layout_marginBottom="12dp"
        android:text="@string/Version"
        android:textSize="13dp"/>

    <TextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/version_title"
        android:layout_below="@id/about_header"
        android:text="0.2"
        android:textSize="13dp"/>

    <View
        android:id="@+id/divider_six"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/version_title"
        android:background="@color/colorPrimaryDark" />

</RelativeLayout>